Fix problem that was caused by incorrect align-item tag

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,6 @@ main {
 .project-details {
   display: flex;
   flex-direction: column;
-  alig-items: space-around;
   flex: 1; 
 }
 
